--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is my first modification in this excercise
+            This is my first modification in this excercise --- won't be my last !!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
