Some changes made on the local machine

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,9 @@
         <br>
         <div class="center text-big bold">
             This is my first modification in this excercise --- won't be my last !!
+
+<h4> Lets see how this LOOKS </h4>
+
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
